--- a/style.css
+++ b/style.css
@@ -12,5 +12,25 @@ table {
 td {
     text-align: center;
     padding: 15px;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Ubuntu', sans-serif; 
+}
+
+th:first-child, td:first-child {
+    width: 0em;
+    min-width: 0em;
+    max-width: 0em;
+    text-align:center;
+    background-color: rgb(146, 146, 146);
+}
+
+td:hover {
+    background-color: #f5f5f5;
+}
+
+.gridview, .gridview td, .gridview th {
+    border: 1px solid #cccccc;
+}
+
+.gridview .selected {
+    background-color: darkgrey;
 }
